# pylint-per-file-ignores

./: .flake8  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  REUSE.toml  foo.py  pyproject.toml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml  release.yml
news/: +18f6c191.fix.md  +805c79d0.feature.md  +bcdb07a6.fix.md
pylint_per_file_ignores/: _plugin.py
test/: test_config_parsing.py  test_plugin.py
test/test_config_parsing/test_config_pylintrc/: .pylintrc
test/test_config_parsing/test_config_pylintrc_duplicate_pattern/: .pylintrc
test/test_config_parsing/test_config_pylintrc_empty_rules/: .pylintrc
test/test_config_parsing/test_config_pylintrc_multiline/: .pylintrc
test/test_config_parsing/test_config_pyproject_toml/: pyproject.toml
test/test_config_parsing/test_config_setup_cfg/: setup.cfg
test/test_config_parsing/test_without_per_file_ignores/: pyproject.toml
test/test_plugin/configs/rc/: pylintrc_00  pylintrc_01  pylintrc_02
test/test_plugin/test_multi_job/: note  pyproject.toml
test/test_plugin/test_multi_job/project/: _main.py
test/test_plugin/test_multi_job/tests/: test_main.py
test/test_plugin/test_no_config/: my_code.py  pyproject.toml
test/test_plugin/test_with_pyproject_toml/: pyproject.toml
test/test_plugin/test_with_pyproject_toml/a/: some_a.py
test/test_plugin/test_with_pyproject_toml/b/: some_b.py
test/test_plugin/test_with_rcfile/: .pylintrc
test/test_plugin/test_with_rcfile/a/: some_a.py
