[build-system]
requires = ["setuptools>=61", "setuptools-scm~=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pylint-per-file-ignores"
dynamic = ["version"]
description = "A pylint plugin to ignore error codes per file."
authors = [
    { name = "Christopher Pickering", email= "christopher@going.bg"},
    { name = "Kai Harder", email = "kai.harder@sap.com"}
]
maintainers = [
    { name = "Kai Harder", email = "kai.harder@sap.com"}
]
readme = "README.md"
keywords = ["pylint", "plugin", "quality", "linter"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Framework :: Pylint",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed"
]
requires-python = ">=3.9,<4"
dependencies = [
    "pylint",  # TODO: Specify version
    "tomli~=2.2;python_version<'3.11'",
]
license = "MIT"
license-files = ["LICENSE"]
